# cilix-rdc

./: .gitignore  CMakeLists.txt  Config.h.in  README.en.md  README.md
cilix_include/: cilix_sp_ddk.h
cilix_os_config/: cilix_os_config.h
cilix_rdc/: cilix_rdc.c  cilix_rdc.h  cilix_rdc_seq.c  cilix_rdc_seq.h  cilix_rdc_task.c  cilix_rdc_task.h
cilix_rdc_ivk/: cilix_rdc_ivk.c  cilix_rdc_ivk.h
cilix_sp/: cilix_sp_cps.c
cilix_sp_include/: cilix_sp_cps.h
cilix_spi_ap/: cilix_sap.c  cilix_sap.h  cilix_sap_frame.c  cilix_sap_frame.h  cilix_sap_req.h  cilix_sap_seq.c  cilix_sap_seq.h
cilix_test/: cilix_test.c  cilix_test_base64.c  cilix_test_ivk.c  cilix_test_json.c  cilix_test_proc.c  cilix_test_signal.c  cilix_test_sys.c  cilix_test_timeout.c  cilix_test_toml.c
cilix_uv/: cilix_allocator.c  cilix_allocator.h  cilix_base64.c  cilix_base64.h  cilix_dlib.c  cilix_dlib.h  cilix_file.c  cilix_file.h  cilix_json.c  cilix_json.h  cilix_mutex.c  cilix_mutex.h  cilix_queue.c  cilix_queue.h  cilix_socket.c  cilix_socket.h  cilix_system.c  cilix_system.h  cilix_task.c  cilix_task.h  cilix_thread.c  cilix_thread.h  cilix_timeout.c  cilix_timeout.h  cilix_toml.c  cilix_toml.h  cilix_tpp_sys.c  cilix_tpp_sys.h
claux/base64c/: base64.c
claux/libuv1.38.1/: CMakeLists.txt
claux/libuv1.38.1/docs/code/plugin/: main.c
claux/libuv1.38.1/include/: uv.h
claux/libuv1.38.1/libs/Darwin/x86_64/: libuv.1.0.0.dylib
claux/libuv1.38.1/libs/Linux/aarch64/: libuv.so.1.0.0
claux/libuv1.38.1/libs/Linux/x86_64/: libuv.so.1.0.0
claux/tomlc99/: toml.c  toml.h
libs/Darwin/x86_64/: cilix_rdc  libcilix_rdc_ivk.dylib  libcilix_sp_cp.dylib  libcilix_spi_ap.dylib
libs/Linux/aarch64/: cilix_rdc  cilix_sap.h
libs/Linux/x86_64/: cilix_rdc  cilix_sap.h  cilix_sp_cps.h
libs/Windows/AMD64/: cilix_rdc_ivk.h  cilix_rdc_ivk.lib  cilix_rdc_ivk_a.lib  cilix_sp_cp.lib  cilix_sp_cp_a.lib  cilix_sp_ddk.h  cilix_sp_exp.h  cilix_spi_ap.lib  cilix_spi_ap_a.lib  uv_a.lib
